@@ -2,9 +2,7 @@ import unittest
 from zope.testing import doctest, cleanup
 from Products.Five import zcml
 
-import Products.Five
 try:
-    import kss.core
     import kss.core
     import kss.core.tests
     import plone.app.kss
@@ -12,18 +10,27 @@ try:
 except ImportError:
     HAS_KSS = False
 
-import plone.app.form
-import plone.memoize
-
 optionflags =  (doctest.ELLIPSIS |
                 doctest.NORMALIZE_WHITESPACE)
 
 
 def setUp(test):
+    import five.formlib
+    import plone.app.form
+    import plone.memoize
+    import Products.CMFCore
+    import Products.Five
+
     zcml.load_config('configure.zcml', Products.Five)
+    zcml.load_config('configure.zcml', five.formlib)
     zcml.load_config('meta.zcml', kss.core)
     zcml.load_config('configure.zcml', kss.core)
     zcml.load_config('configure-unittest.zcml', kss.core.tests)
+    try:
+        zcml.load_config('permissions.zcml', Products.CMFCore)
+    except IOError:
+        # BBB CMF 2.2
+        pass
     zcml.load_config('configure.zcml', plone.app.form)
     zcml.load_config('configure.zcml', plone.memoize)
     zcml.load_config('configure.zcml', plone.app.kss)
