@@ -1,20 +1,27 @@
 import unittest
-import Products.Five
-import plone.app.form
 from zope.testing import doctest, cleanup
 from Products.Five import zcml
 
-optionflags =  (doctest.ELLIPSIS |
-                doctest.NORMALIZE_WHITESPACE |
-                doctest.REPORT_ONLY_FIRST_FAILURE)
+optionflags =  (doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE)
 
 
 def setUp(test):
+    import Products.Five
+    import Products.CMFCore
+    import plone.app.form
+
     zcml.load_config('configure.zcml', Products.Five)
+    try:
+        zcml.load_config('permissions.zcml', Products.CMFCore)
+    except IOError:
+        # BBB CMF 2.2
+        pass
     zcml.load_config('configure.zcml', plone.app.form)
+
 
 def tearDown(test):
     cleanup.cleanUp()
+
 
 def test_suite():
     return unittest.TestSuite([
